<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_activity_bg"
    android:id="@+id/container_aboutus">

    <include android:id="@+id/about_toolbar"
        layout="@layout/app_bar"/>

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center">

    <!-- Banner Image  -TGIF -->
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/banner_img"
        android:src="@mipmap/ic_launcher"/>

    <!-- Banner Text -TGIF (Large) -->
    <TextView
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/banner_large_txt"
        android:id="@+id/banner_large_txt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/facebook_code"/>

    <!-- Banner Text -TGIF (Small) -->
    <TextView
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/banner_small_txt"
        android:id="@+id/banner_small_txt"
        android:textSize="12sp"
        android:textColor="@color/facebook_code"/>


        <!-- link to Facebook page -->
        <TextView
            android:layout_gravity="left"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/fblink"
            android:text="@string/fblink_tv"
           />


        <!-- link to email -->
        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="left"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emaillink"
            android:text="@string/emaillink_tv"
          />


    </LinearLayout>

  
        <!-- Text -copyRight at Crackdeveloperz -->
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/footer_txt_copyright"
            android:id="@+id/footer_txt_copyright"
            android:textColor="#000000"/>





</RelativeLayout>